# ctlox

./: .clang-format  CMakeLists.txt  constexpr_limitations.md  ct.h  ctlox.cpp  ctlox.sln  ctlox.vcxproj  ctlox.vcxproj.filters  error.h  interpreter.h  interpreter_ct.h  numbers.h  parser_ct.h  readme.md  scanner.h  scanner_ct.h  string_ct.h  token.h  token_ct.h  token_type.h  types.h
include/ctlox/: ctlox.hpp  v1.hpp  v2.hpp
include/ctlox/common/: characters.hpp  numbers.hpp  string.hpp  token_type.hpp
include/ctlox/v1/: ct.h  ct.hpp  ctlox.hpp  interpreter.hpp  interpreter_ct.h  numbers.h  numbers.hpp  parser.hpp  parser_ct.h  scanner.hpp  scanner_ct.h  string.hpp  string_ct.h  types.h  types.hpp
include/ctlox/v2/: code_generator.hpp  ctlox.hpp  environment.hpp  exception.hpp  expression.hpp  flat.hpp  flat_ast.hpp  flat_ptr.hpp  flattener.hpp  function.hpp  function_impl.hpp  literal.hpp  lox_function.hpp  native_function.hpp  parser.hpp  program_state.hpp  resolver.hpp  runtime_error.hpp  scanner.hpp  serializer.hpp  statement.hpp  static_visit.hpp  token.hpp  types.hpp  value.hpp
src/: CMakeLists.txt  main.cpp  v1.cpp  v2.cpp
tests/: CMakeLists.txt  main.cpp
tests/v1/: test_ct.cpp  test_interpreter.cpp  test_parser.cpp  test_scanner.cpp
tests/v2/: framework.hpp  test_code_generator.cpp  test_flattener.cpp  test_parser.cpp  test_scanner.cpp  test_serializer.cpp
